welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:3: error: not found: value x
    	for (i <- 1 to x){recule}
                       ^